--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="<%= productDescription %>">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, user-scalable=no, maximum-scale=1, minimum-scale=1, <% if (ctx.mode.cordova || ctx.mode.capacitor) %>">
+    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=nos, <% if (ctx.mode.cordova || ctx.mode.capacitor) %>">
 
 
     <link rel="icon" type="image/png" sizes="128x128" href="icons/favicon-128x128.png">
