--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="description" content="<%= productDescription %>">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
-    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=nos, <% if (ctx.mode.cordova || ctx.mode.capacitor) %>">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="viewport" content="viewport-fit=cover, width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=nos, <% if (ctx.mode.cordova || ctx.mode.capacitor) %>">
 
 
     <link rel="icon" type="image/png" sizes="128x128" href="icons/favicon-128x128.png">
